feat: Implement admin user seeding script and enhance user data security by omitting passwords from auth service responses.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma:studio": "npx prisma studio",
     "prisma:validate": "npx prisma validate",
     "prisma:format": "npx prisma format",
+    "seed:admin": "ts-node prisma/seed-admin.ts",
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
