--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "build": "nest build",
+    "vercel-build": "prisma generate && prisma migrate deploy && nest build",
     "nest:m": "npx nest g resource",
     "start": "nest start",
-    "build": "nest build",
     "start:dev": "nest start --watch",
     "start:prod": "node dist/main",
     "start:debug": "nest start --debug --watch",
